--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello
+<html>
+  <head>
+    <title>Days Of Week</title>
+  </head>
+  <body>
+    <ol>
+      <li><a href="/Monday">Monday</a></li>
+      <li><a href="/Tuesday">Tuesday</a></li>
+      <li><a href="/Wednesday">Wednesday</a></li>
+      <li><a href="/Thursday">Thursday</a></li>
+      <li><a href="/Friday">Friday</a></li>
+      <li><a href="/Saturday">Saturday</a></li>
+      <li><a href="/Sunday">Sunday</a></li>
+    </ol>
+  </body>
+</html>
