--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
     <title>Days Of Week</title>
   </head>
   <body>
-    <ol>
-      <li><a href="/Monday">Monday</a></li>
-      <li><a href="/Tuesday">Tuesday</a></li>
-      <li><a href="/Wednesday">Wednesday</a></li>
-      <li><a href="/Thursday">Thursday</a></li>
-      <li><a href="/Friday">Friday</a></li>
-      <li><a href="/Saturday">Saturday</a></li>
-      <li><a href="/Sunday">Sunday</a></li>
-    </ol>
+    <div style="text-align: center; margin-left:10%; margin-right:10%;">
+      <ol>
+        <li><a href="/Monday">Monday</a></li>
+        <li><a href="/Tuesday">Tuesday</a></li>
+        <li><a href="/Wednesday">Wednesday</a></li>
+        <li><a href="/Thursday">Thursday</a></li>
+        <li><a href="/Friday">Friday</a></li>
+        <li><a href="/Saturday">Saturday</a></li>
+        <li><a href="/Sunday">Sunday</a></li>
+      </ol>
+      <iframe src="https://cdn.forms-content.sg-form.com/4d368b90-77de-11ec-b124-5eac72f7c658"/>
+    </div>
   </body>
 </html>
