--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div style="text-align: center; margin-left:10%; margin-right:10%;">
+      <h1>Haftanın Günleri</h1>
       <ol>
         <li><a href="/Monday">Monday</a></li>
         <li><a href="/Tuesday">Tuesday</a></li>
@@ -13,7 +14,7 @@
         <li><a href="/Saturday">Saturday</a></li>
         <li><a href="/Sunday">Sunday</a></li>
       </ol>
-      <iframe src="https://cdn.forms-content.sg-form.com/4d368b90-77de-11ec-b124-5eac72f7c658"/>
+      <iframe style="width: 100%;border: none;height: 500;" src="https://cdn.forms-content.sg-form.com/4d368b90-77de-11ec-b124-5eac72f7c658"/>
     </div>
   </body>
 </html>
