--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
   </head>
   <body>
     <div style="text-align: center; margin-left:10%; margin-right:10%;">
-      <h1>Haftanın Günleri</h1>
-      <ul>
-        <li><a href="/Monday">Monday</a></li>
-        <li><a href="/Tuesday">Tuesday</a></li>
-        <li><a href="/Wednesday">Wednesday</a></li>
-        <li><a href="/Thursday">Thursday</a></li>
-        <li><a href="/Friday">Friday</a></li>
-        <li><a href="/Saturday">Saturday</a></li>
-        <li><a href="/Sunday">Sunday</a></li>
-      </ul>
       <iframe style="width: 100%;border: none;height: 500;" src="https://cdn.forms-content.sg-form.com/4d368b90-77de-11ec-b124-5eac72f7c658"/>
+      <b>Günler: </b>
+      <a href="/Monday">Monday</a>, 
+      <a href="/Tuesday">Tuesday</a>, 
+      <a href="/Wednesday">Wednesday</a>, 
+      <a href="/Thursday">Thursday</a>, 
+      <a href="/Friday">Friday</a>, 
+      <a href="/Saturday">Saturday</a>, 
+      <a href="/Sunday">Sunday</a>
     </div>
   </body>
 </html>
