--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
   </head>
   <body>
     <div style="text-align: center; margin-left:10%; margin-right:10%;">
-      <b>Günler: </b>
-      <a href="/Monday">Monday</a>, 
-      <a href="/Tuesday">Tuesday</a>, 
-      <a href="/Wednesday">Wednesday</a>, 
-      <a href="/Thursday">Thursday</a>, 
-      <a href="/Friday">Friday</a>, 
-      <a href="/Saturday">Saturday</a>, 
-      <a href="/Sunday">Sunday</a>
+      <b>Açık Kaynak :</b> <a href="https://github.com/puhulab/daysofweek">github.com / puhulab / daysofweek</a>
       <hr/>
       <iframe style="width: 100%;border: none;height: 500;" src="https://cdn.forms-content.sg-form.com/4d368b90-77de-11ec-b124-5eac72f7c658"/>
     </div>
