--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="tr">
   <head>
     <title>Days Of Week</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div style="text-align: center; margin-left:10%; margin-right:10%;">
